--- a/diff_p1-3ph.html
+++ b/diff_p1-3ph.html
@@ -84,8 +84,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-097486" class="d2h-file-name">/home/runner/work/progress/progress/clones/{beta/custom_components → ha-core/homeassistant/components}/plugwise/config_flow.py</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+28</span>
-          <span class="d2h-lines-deleted">-247</span>
+          <span class="d2h-lines-added">+29</span>
+          <span class="d2h-lines-deleted">-249</span>
       </span>
     </span>
 </li>
@@ -6088,7 +6088,7 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -10,118 +8,57 @@</div>
+        <div class="d2h-code-line">@@ -10,123 +8,61 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
@@ -7542,16 +7542,82 @@
             <span class="d2h-code-line-ctn">async def validate_gw_input(hass: HomeAssistant, data: dict[str, Any]) -&gt; Smile:</span>
         </div>
     </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del d2h-change">
+      <div class="line-num1">128</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del d2h-change">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">    &quot;&quot;&quot;</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">129</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">    Validate whether the user input allows us to connect to the gateway.</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-ins d2h-change">
+      <div class="line-num1"></div>
+<div class="line-num2">65</div>
+    </td>
+    <td class="d2h-ins d2h-change">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">    &quot;&quot;&quot;<ins>Validate whether the user input allows us to connect to the gateway.</ins></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-cntx">
+      <div class="line-num1">130</div>
+<div class="line-num2">66</div>
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn"><br></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-cntx">
+      <div class="line-num1">131</div>
+<div class="line-num2">67</div>
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">    Data has the keys from _base_gw_schema() with values provided by the user.</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-cntx">
+      <div class="line-num1">132</div>
+<div class="line-num2">68</div>
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">    &quot;&quot;&quot;</span>
+        </div>
+    </td>
 </tr>
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -220,79 +157,15 @@</div>
+        <div class="d2h-code-line">@@ -220,79 +156,15 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">220</div>
-<div class="line-num2">157</div>
+<div class="line-num2">156</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -7562,7 +7628,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">221</div>
-<div class="line-num2">158</div>
+<div class="line-num2">157</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -7573,7 +7639,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">222</div>
-<div class="line-num2">159</div>
+<div class="line-num2">158</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -7595,7 +7661,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">160</div>
+<div class="line-num2">159</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -7606,7 +7672,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins">
       <div class="line-num1"></div>
-<div class="line-num2">161</div>
+<div class="line-num2">160</div>
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-line">
@@ -7617,7 +7683,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins">
       <div class="line-num1"></div>
-<div class="line-num2">162</div>
+<div class="line-num2">161</div>
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-line">
@@ -7628,7 +7694,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">224</div>
-<div class="line-num2">163</div>
+<div class="line-num2">162</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -7639,7 +7705,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">225</div>
-<div class="line-num2">164</div>
+<div class="line-num2">163</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -7650,7 +7716,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">226</div>
-<div class="line-num2">165</div>
+<div class="line-num2">164</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -7813,36 +7879,25 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-ins d2h-change">
-      <div class="line-num1"></div>
-<div class="line-num2">166</div>
-    </td>
-    <td class="d2h-ins d2h-change">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        return await self.<ins>async_step_user</ins>()</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-cntx">
+    <td class="d2h-code-linenumber d2h-del">
       <div class="line-num1">241</div>
-<div class="line-num2">167</div>
+<div class="line-num2"></div>
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del">
         <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-prefix">-</span>
             <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del d2h-change">
+    <td class="d2h-code-linenumber d2h-del">
       <div class="line-num1">242</div>
 <div class="line-num2"></div>
     </td>
-    <td class="d2h-del d2h-change">
+    <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><del>        if</del> <del>user_input</del> <del>is not None:</del></span>
+            <span class="d2h-code-line-ctn">        if user_input is not None:</span>
         </div>
     </td>
 </tr><tr>
@@ -8099,25 +8154,36 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">266</div>
-<div class="line-num2"></div>
+    <td class="d2h-code-linenumber d2h-ins d2h-change">
+      <div class="line-num1"></div>
+<div class="line-num2">165</div>
     </td>
-    <td class="d2h-del">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">        return await self.<ins>async_step_user</ins>()</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-cntx">
+      <div class="line-num1">266</div>
+<div class="line-num2">166</div>
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
             <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
+    <td class="d2h-code-linenumber d2h-del d2h-change">
       <div class="line-num1">267</div>
 <div class="line-num2"></div>
     </td>
-    <td class="d2h-del">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    async def async_step_manual_path(</span>
+            <span class="d2h-code-line-ctn">    async def <del>async_step_manual_path</del>(</span>
         </div>
     </td>
 </tr><tr>
@@ -8431,18 +8497,18 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">168</div>
+<div class="line-num2">167</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>    async</ins> <ins>def</ins> <ins>async_step_user(</ins></span>
+            <span class="d2h-code-line-ctn">    async def <ins>async_step_user</ins>(</span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">296</div>
-<div class="line-num2">169</div>
+<div class="line-num2">168</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -8453,7 +8519,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">297</div>
-<div class="line-num2">170</div>
+<div class="line-num2">169</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -8464,7 +8530,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">298</div>
-<div class="line-num2">171</div>
+<div class="line-num2">170</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -8476,12 +8542,12 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -306,19 +179,17 @@</div>
+        <div class="d2h-code-line">@@ -306,19 +178,17 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">306</div>
-<div class="line-num2">179</div>
+<div class="line-num2">178</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -8492,7 +8558,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">307</div>
-<div class="line-num2">180</div>
+<div class="line-num2">179</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -8503,7 +8569,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">308</div>
-<div class="line-num2">181</div>
+<div class="line-num2">180</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -8536,7 +8602,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">182</div>
+<div class="line-num2">181</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -8547,7 +8613,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">183</div>
+<div class="line-num2">182</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -8558,7 +8624,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">311</div>
-<div class="line-num2">184</div>
+<div class="line-num2">183</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -8569,7 +8635,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">312</div>
-<div class="line-num2">185</div>
+<div class="line-num2">184</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -8657,7 +8723,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">186</div>
+<div class="line-num2">185</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -8668,7 +8734,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">187</div>
+<div class="line-num2">186</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -8679,7 +8745,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">188</div>
+<div class="line-num2">187</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -8690,7 +8756,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">189</div>
+<div class="line-num2">188</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -8701,7 +8767,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">190</div>
+<div class="line-num2">189</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -8712,7 +8778,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">191</div>
+<div class="line-num2">190</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -8723,7 +8789,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">320</div>
-<div class="line-num2">192</div>
+<div class="line-num2">191</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -8745,7 +8811,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">322</div>
-<div class="line-num2">193</div>
+<div class="line-num2">192</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -8756,7 +8822,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">323</div>
-<div class="line-num2">194</div>
+<div class="line-num2">193</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -8767,7 +8833,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">324</div>
-<div class="line-num2">195</div>
+<div class="line-num2">194</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -8779,12 +8845,12 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -330,97 +201,7 @@</div>
+        <div class="d2h-code-line">@@ -330,97 +200,7 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">330</div>
-<div class="line-num2">201</div>
+<div class="line-num2">200</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -8795,7 +8861,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">331</div>
-<div class="line-num2">202</div>
+<div class="line-num2">201</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -8806,7 +8872,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">332</div>
-<div class="line-num2">203</div>
+<div class="line-num2">202</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -9015,7 +9081,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">351</div>
-<div class="line-num2">204</div>
+<div class="line-num2">203</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -9037,7 +9103,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-ins d2h-change">
       <div class="line-num1"></div>
-<div class="line-num2">205</div>
+<div class="line-num2">204</div>
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
@@ -9048,7 +9114,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">353</div>
-<div class="line-num2">206</div>
+<div class="line-num2">205</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
@@ -9059,7 +9125,7 @@
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">354</div>
-<div class="line-num2">207</div>
+<div class="line-num2">206</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
